# radiologist-perceptual-eval-xrays

./: README.md
diffusion-model/: generate_several.py  inference atelectasis.sh  inference cardiomegaly.sh  inference lung opacity.sh  inference no findings.sh  inference pleural effusion.sh  inference.py  inference.sh
gan-model/: README.md  generate.py  train_script.sh
web-interface-backend/: .gitignore  README.md  pyproject.toml
web-interface-backend/app/api/: crud.py  database.py  main.py
web-interface-backend/app/api/models/: __init__.py  conditionality.py  image.py  ma.py  ma_images.py  ma_nasa_tlx.py  ma_questionnaires.py  realism.py  user.py
web-interface-backend/app/api/schemas/: __init__.py  conditionality.py  image.py  ma_images.py  ma_nasa_tlx.py  ma_questionnaire.py  realism.py  user.py
web-interface-backend/app/api/settings/: cors.py
web-interface-backend/seeds/: dev.py  prod.py
web-interface-frontend/: .env  .env.production  README.md  index.html  package-lock.json  package.json
web-interface-frontend/src/: App.css  App.tsx  links.ts
web-interface-frontend/src/backend/: routes.ts
web-interface-frontend/src/components/Confetti/: index.tsx
web-interface-frontend/src/components/ContrastSlider/: index.tsx
web-interface-frontend/src/components/FinishedMessage/: index.tsx
web-interface-frontend/src/components/Image/: index.tsx  style.css
web-interface-frontend/src/components/LikertScale/: index.tsx
web-interface-frontend/src/hooks/: useDarkMode.ts  useUsername.ts  useWindowDimensions.ts  useZoomed.ts
(+28 files in other folders)
